feat:add Get http openAPI in About,Category, Project,Service, Skill and Technology Controllers
